# advent-of-code-2021

day1/: day1.py  pyproject.toml
day2/: day2.py  pyproject.toml
day3/: day3.py  pyproject.toml
day4/: day4.py  pyproject.toml
