[tool.poetry]
name = "day4"
version = "0.1.0"
description = ""
authors = ["Kyle Krcmaric <krcm0209@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
